[package]
name = "rexparser"
version = "0.1.0"
authors = ["Shingo Kato <katomail0510@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.6.0"
inkwell = { git  =  "https://github.com/TheDan64/inkwell", branch = 'llvm7-0' }
